[project]
name = "euphony"
version = "0.1.0"
requires-python = ">=3.9"
# Main dependencies for the euphony FastAPI server.
dependencies = [
  "fastapi",
  "uvicorn",
  "async-lru",
  "openai",
  "pydantic",
  "jmespath",
  # Pin to the latest prebuilt wheel that installs cleanly without a local Rust
  # toolchain in our supported dev setup.
  "openai-harmony==0.0.4",
]


[tool.ruff.lint]
extend-select = ["ANN2"]

[tool.setuptools.packages.find]
include = ["euphony*"]

[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[tool.mypy]
strict = true
local_partial_types = true
